src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__lists_tables__render_nested_list.snap
---
source: src/renderer/html/tests/lists_tables.rs
expression: html
---
<ul>
<li>item 1
<ul>
<li>sub 1</li>
</ul>
</li>
<li>item 2</li>
</ul>
