src/renderer/html/tests/snapshots/ferromark__renderer__html__tests__lists_tables__render_table_no_gfm.snap
---
source: src/renderer/html/tests/lists_tables.rs
expression: html
---
<p>| head |
| --- |
| body |</p>
